# squawk

./: .gitignore  .pdm.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
squawk/: exceptions.py
squawk/app/: __init__.py  cli.py  main.py  resolve.py  transcribe.py
squawk/settings/: default_settings.toml  default_settings.yml  manager.py  regrouping_rules.py  schema.py
squawk/utils/: checks.py  core.py  pkg_info.py
