[project]
name = "squawk"
version = "0.2.0"
description = "Automatic subtitles for Davinci Resolve with OpenAI Whisper"
authors = [
    {name = "in03", email = "in03@users.noreply.github.com"},
]
dependencies = [
    "whisper @ git+https://github.com/openai/whisper.git",
    "typer[all]>=0.6.1",
    "deepdiff>=6.2.1",
    "ruamel.yaml>=0.17.21",
    "yaspin>=2.2.0",
    "schema>=0.7.5",
    "tqdm>=4.64.1",
    "pydavinci @ git+https://github.com/in03/pydavinci",
    "pyfiglet>=0.8.post1",
    "requests>=2.28.1",
    "numpy>=1.23.4",
    "transformers>=4.23.1",
    "more-itertools>=9.0.0",
    "setuptools>=65.5.0",
    "notify-py>=0.3.2",
    "commonregex>=1.5.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cu116"
verify_ssl = true
name = "pytorch"

[tool.pdm.overrides]
torch = "1.12.1+cu116"

[tool]
[tool.pdm]

[project.scripts]
squawk = "squawk.app.cli:main"